# SemanticDB

./: .gitignore  Cargo.toml  Dockerfile  README.md  init.sql
.devcontainer/: Dockerfile  devcontainer.json
project_data/1/: a.txt
src/: main.rs
src/dto/: user_dto.rs
src/handlers/: embedding_handler.rs  embeddings.rs  mod.rs  project_handler.rs  user_handler.rs  user_handler_test.rs
src/management_console/: package-lock.json  package.json
src/memory_management/: mod.rs  project_manager.rs  project_store.rs
src/models/: claims.rs  credentials.rs  embedding_entry.rs  file.rs  mod.rs  project.rs  reset_password_credentials.rs  token_response.rs  user.rs  user_project.rs  user_response.rs
src/tests/: mod.rs  project_handler_test.rs  user_handler_test.rs
src/utils/: middleware.rs
