[package]
name = "summaries_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-rt = "2.2.0"
actix-cors = "0.6.0-beta.1"
actix-identity = "0.4.0-beta.1"
actix-files = "0.6.0-beta.1"
actix-session = "0.5.0-beta.1"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["sqlite", "runtime-actix-rustls"] }
jsonwebtoken = "7.2.0"
tokio = { version = "1", features = ["full"] }
bcrypt = "0.14.0"
chrono = "0.4.24"
actix-service = "2.0.2"
futures = "0.3.28"
multipart = "0.18.0"
sanitize-filename = "0.4.0"
actix-multipart = "0.6.0"
async-std = "1.12.0"
openai-rust = "0.4"
reqwest = "0.11.18"
bincode = "1.3.3"
faiss = "0.12.0"
annoy = "0.1.0"
annoy-rs = "0.1.0"
vpsearch = "2.0.1"
blas = "0.22.0"
blas-src = { version = "*", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.1", default-features = false, features = ["cblas", "system"] }
env_logger = "0.10.0"
anyhow = "1.0.71"
